# qtcoroutine

./: .clang-format  .gitattributes  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  main.cpp
.github/workflows/: ci.yml
cmake/: qtcoroutineConfig.cmake.in
examples/: CMakeLists.txt  basic.cpp  combinators.cpp  main.cpp  network_client.cpp  streams.cpp
include/QtCoroutine/: QFutureCoroutineTraits  QSignalAwaitable  QSignalStream  QTask  QtCoroutine  qfuture_coroutine_traits.hpp  qsignalstream.hpp  qtask.hpp  qtcoroutine.hpp  utils.hpp
include/qtcoroutine/: qfuture_coroutine.hpp  qfuture_coroutine_traits.hpp  qtask.hpp  qtcoroutine.hpp  utils.hpp
tests/: CMakeLists.txt  test_core.cpp  test_qfuture_coroutine.cpp  test_qtask.cpp  tsan.supp
